# ord_subset

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
src/: almost_ord_trait.rs  iter_ext.rs  lib.rs  ord_subset_trait.rs  ord_val.rs  ord_var.rs  rev_option.rs  slice_ext.rs
tests/: lib.rs
