[package]
name = "ord_subset"
version = "3.0.0"
authors = ["Emerentius"]

license = "MIT/Apache-2.0"
repository = "https://github.com/emerentius/ord_subset"
documentation = "https://docs.rs/ord_subset/"

description = "Tools for working with the Ord subset of certain PartialOrd types, like floats."

keywords = ["iterator", "slice", "Ord", "PartialOrd", "float"]

[features]
default = ["std"]

# Provides ord_subset_* versions of allocating sorts on slices
std = []

# Currently does nothing
# Provides in principle access to features dependent on unstable functionality
unstable = []

# Forward core::ops implementations of T to OrdVar<T>
# all results are checked to be ordered by default
ops = []

# Deactivate Ord checks for the result of overloaded ops
unchecked_ops = ["ops"]