[package]
name = "ord_subset"
version = "3.1.1"
authors = ["Emerentius"]
# rust-version = "1.21.0" # attr introduced in 1.56, ignored before
edition = "2015"

readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/emerentius/ord_subset"
documentation = "https://docs.rs/ord_subset/"

description = "Tools for working with the Ord subset of certain PartialOrd types, like floats."

keywords = ["iterator", "slice", "Ord", "PartialOrd", "float"]

[lints.clippy]
unnecessary_clippy_cfg = "allow"
inline_always = "allow"
match_bool = "allow"
deprecated_cfg_attr = "allow"

[features]
default = ["std"]

# Provides ord_subset_* versions of allocating sorts on slices
std = []

# Currently does nothing
# Provides in principle access to features dependent on unstable functionality
unstable = []

# Forward core::ops implementations of T to OrdVar<T>
# e.g. impl Add<U> for OrdVar<T> where T: Add<U>
# all results are checked to be ordered by default
# Does not yet allow OrdVar<T> `op` OrdVar<U> unless T: Add<OrdVar<U>>
ops = []

# Deactivate Ord checks for the result of overloaded ops
# Because this is not a purely additive feature, it may cause
# interoperability issues with other crates
unchecked_ops = ["ops"]
